--- a/src/plugins/locales/en.json
+++ b/src/plugins/locales/en.json
@@ -1,8 +1,11 @@
 {
-    "nom": "NAME",
-    "titre": "Title",
-    "tabOne": "Tab One",
-    "tabTwo": "Tab Two",
-    "tabThree": "Tab Three",
-    "tabFour": "Tab Four"
+    "nom": "NOM",
+    "titre": "Titre",
+    "tabOne": "Profil",
+    "tabTwo": "Training and experience",
+    "tabThree": "Skills and projects",
+    "tabFour": "Languages",
+    "textProfil": "Graduating in September 2024 from ENIB, I'm looking for my first job in development, with the desire to contribute to interesting projects and continue to develop my skills.",
+    "age" : "24 years old",
+    "diplome": "Graduated from the Ecole Nationale d'Ingenieurs de Brest in 2024"
 }
